# s4s_main_board

./: .gitmodules  README.md
docs/: register.md
src/: .mxproject  main_board.ioc
src/Core/Inc/: i2c.h  main.h  stm32f1xx_it.h  usart.h
src/Core/Src/: adc.c  gpio.c  i2c.c  main.c  rtc.c  stm32f1xx_it.c  tim.c  usart.c
src/MDK-ARM/: main_board.uvguix.zishen  main_board.uvoptx  main_board.uvprojx  startup_stm32f103xb.s
src/MDK-ARM/RTE/_main_board/: RTE_Components.h
src/MDK-ARM/main_board/: co-arm_main_board.h  main_board_A.lnt  main_board_F.lnt
src/myCode/: myMain.c  myMain.h
src/myCode/BSP/inc/: BSP_INCLUDE.h  encode_motor.h  gray.h  gyro.h  i2c_receive.h  light_ambient.h  mRTC.h  power.h  servo.h  ultr.h  voice.h
src/myCode/BSP/src/: encode_motor.c  gray.c  gyro.c  i2c_receive.c  light_ambient.c  mRTC.c  power.c  servo.c  ultr.c  voice.c
src/myCode/SYS/delay/: delay.c
src/myCode/SYS/inc/: sys.h
src/myCode/SYS/src/: delay.c  sys.c
src/myCode/component/: udc_conf.h  zst_conf.h
src/myCode/drive/inc/: DRIVE_INCLUDE.h  Device_IIC.h  IIC_Port.h  d_adc.h  d_bmi270.h  d_servo.h  d_voice.h  encoder.h  hardware.h  interrupt.h  mi2c.h  motor.h  pwm.h  ws2812.h
src/myCode/drive/src/: Device_IIC.c  IIC_Port.c  d_adc.c  d_bmi270.c  d_servo.c  d_voice.c  encoder.c  hardware.c  interrupt.c  mi2c.c  motor.c  pwm.c  ws2812.c
src/myCode/misc/inc/: data_structure.h  mtools.h
src/myCode/misc/src/: data_structure.c  mtools.c
test/udc/: CMakeLists.txt  main.c  udc_init.c  udc_init.h
